# SLM_survey_predictions

./: .gitignore  README.md  pyproject.toml  start.sh
data/figures_tables/: lfm_metrics.csv  metrics_by_vote_type.csv  metrics_overall.csv  model_metrics.csv
data/party_positions/: party_positions.json
data/results/: lfmdat.parquet  llama32dat.parquet  qwen3dat.parquet
data/vote_summaries/: summaries.json
docker/: Dockerfile
src/: Process_data.py  analysis_results.py  download_models.py  run_models.py
src/__marimo__/session/: Process_data.py.json  download_models.py.json  run_models.py.json
